commit 156 : 사용자 관리, 게시판 관리 테뷸레이터 적용

--- a/src/main/resources/templates/manager/order.html
+++ b/src/main/resources/templates/manager/order.html
@@ -14,6 +14,7 @@
                 <div class="text-start">
                     <h3>사용자 주문 관리</h3>
                     <p style="color: red">* 리뷰가 작성된 주문건은 주문상태를 변경할 수 없습니다.</p>
+                    <p style="color: red">* 테이블행을 클릭하면, 해당 주문의 상세 정보 확인이 가능합니다.</p>
                 </div>
                 <div class="text-end"></div>
             </div>
@@ -29,8 +30,8 @@
 
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <h4 class="modal-title">쿠폰 사용자 리스트 조회</h4>
-                        <button type="button" class="btn-close" id="close-userList-log-btn" data-bs-dismiss="modal"></button>
+                        <h4 class="modal-title">주문 상세 정보</h4>
+                        <button type="button" class="btn-close" id="close-orderList-log-btn" data-bs-dismiss="modal"></button>
                     </div>
 
                     <!-- Modal body -->
@@ -40,7 +41,7 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-outline-danger" id="cancel-userList-log-btn" data-bs-dismiss="modal">취소</button>
+                        <button type="button" class="btn btn-outline-danger" id="cancel-orderList-log-btn" data-bs-dismiss="modal">취소</button>
                     </div>
 
                 </div>
