--- a/src/main/resources/templates/manager/postType.html
+++ b/src/main/resources/templates/manager/postType.html
@@ -5,18 +5,6 @@
 
 <th:block layout:fragment="head">
     <title>HONG SHOP</title>
-    <style>
-        th, td {
-            text-align: center;
-            vertical-align: middle;
-        }
-        tr{
-            text-align: center;
-        }
-        .margin-10 {
-            margin-top: 10px
-        }
-    </style>
 </th:block>
 
 <th:block layout:fragment="content">
@@ -32,48 +20,7 @@
             </div>
         </div>
         <div class="card-body">
-            <table class="table table-bordered" id="cart-table">
-                <thead>
-                    <tr>
-                        <th style="width: 5%;">번호</th>
-                        <th style="width: 10%">게시판 유형</th>
-                        <th style="width: 10%">게시판 이름</th>
-                        <th style="width: 5%">정렬순서</th>
-                        <th style="width: 5%">사용여부</th>
-                        <th style="width: 5%">게시글 개수</th>
-                        <th style="width: 10%">url</th>
-                        <th style="width: 10%">게시판 보러가기</th>
-                        <th style="width: 10%">수정/삭제</th>
-                    </tr>
-                </thead>
-                <tbody>
-                <th:block th:if="${postTypeList.size() == 0}">
-                    <tr>
-                        <td colspan="9">게시판 유형 정보가 비어있습니다.</td>
-                    </tr>
-                </th:block>
-                <th:block th:unless="${postTypeList.size() == 0}">
-                    <th:block  th:each="post, postStat : ${postTypeList}">
-                        <tr>
-                            <td th:text="${postStat.index + 1}" style="width: 5%"></td>
-                            <td th:text="${post.postType}" style="width: 10%"></td>
-                            <td th:text="${post.postName}" style="width: 10%"></td>
-                            <td th:text="${post.orderNum}" style="width: 5%"></td>
-                            <td th:text="${post.useAt}" style="width: 5%"></td>
-                            <td th:text="|${post.hongPost.size()}개|" style="width: 5%"></td>
-                            <td th:text="${post.postUrl}" style="width: 10%"></td>
-                            <td style="width: 10%">
-                                <button type="button" class="btn btn-sm btn-outline-primary post-page-btn" th:value="${post.postTypeId}" th:data-useAt="${post.useAt}">보러가기</button>
-                            </td>
-                            <td style="width: 10%">
-                                <button type="button" class="btn btn-sm btn-outline-secondary post-update-btn" th:value="${post.postTypeId}">수정</button>
-                                <button type="button" class="btn btn-sm btn-outline-danger post-delete-btn" th:value="${post.postTypeId}"  th:data-num="${post.hongPost.size()}">삭제</button>
-                            </td>
-                        </tr>
-                    </th:block>
-                </th:block>
-                </tbody>
-            </table>
+            <div id="postType-table-div"></div>
         </div>
 
         <!-- s: newPostTypeForm -->
@@ -251,6 +198,7 @@
     <script th:inline="javascript">
         let postTypeId = ''
         let postType = ''
+        let table = new Table("postType-table-div")
     </script>
     <script th:src="@{'/assets/js/page/manager/postType.js'}"></script>
 </th:block>
