commit 157 : margin-10 style 다시 추가

--- a/src/main/resources/templates/manager/postType.html
+++ b/src/main/resources/templates/manager/postType.html
@@ -5,6 +5,11 @@
 
 <th:block layout:fragment="head">
     <title>HONG SHOP</title>
+    <style>
+        .margin-10 {
+            margin-top: 10px
+        }
+    </style>
 </th:block>
 
 <th:block layout:fragment="content">
